# Simple-Messenger

./: .gitignore  LICENSE  README.md  build_mac.sh  build_win.bat  requirements.txt
client/: README.md  client_cli.py  client_gui.py  client_gui_old.py  config.py  database.py  gui.py  main.py  network.py  pyproject.toml  requirements.txt
client/old/: README.md  config.py  gui.py  main.py
client/system/: base.py  crypto.py  event_bus.py  factory.py  logger.py  macos.py  utils.py  windows.py
client/tests/: test_client_database.py  test_controllers.py  test_crypto.py  test_event_bus.py  test_utils.py
client/ui/: main_window.py
client/ui/controllers/: __init__.py  app_controller.py  auth_controller.py  base.py  chat_controller.py
client/ui/dialogs/: add_member_dialog.py  base_dialog.py  chat_profile_dialog.py  chats_dialog.py  create_group_dialog.py  media_dialog.py  pm_dialog.py  register_dialog.py  restore_dialog.py  settings_dialog.py
client/ui/screens/: chat_screen.py  login_screen.py
scripts/: build_mac.sh  build_win.bat  installer.iss
server/: .dockerignore  .env.example  Dockerfile  README.md  db.py  docker-compose.yml  entrypoint.sh  main.py  requirements.txt  server.py
server/api/: dependencies.py  websockets.py
server/core/: config.py  crud.py  database.py  logger.py  rate_limiter.py  security.py
server/models/: __init__.py  chat.py  message.py  session.py  user.py
server/schemas/: auth.py  chat.py  message.py
server/tests/: conftest.py  test_auth.py  test_chats.py  test_e2ee.py  test_rate_limit.py  test_read_status.py  test_search.py  (+2 more)
(+5 files in other folders)
